fix text visibility input issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,15 +16,6 @@
   }
 }
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -35,7 +26,6 @@ body {
 
 input {
   color: black;
-  /* Ensures input fields text is always black */
 }
 
 @layer utilities {
